# aibox-teste

./: README.md  pyproject.toml  requirements.txt  screenshot
aiboxteste/: manage.py
aiboxteste/aibox/: apps.py  forms.py  models.py  urls.py  views.py
aiboxteste/aibox/migrations/: 0001_initial.py  0002_auto_20200114_0320.py  0003_auto_20200114_0322.py  0004_auto_20200114_0323.py  0005_auto_20200114_0342.py
aiboxteste/aibox/static/css/: styles.css
aiboxteste/aibox/templates/: base.html
aiboxteste/aibox/templates/aibox/: main_page.html
aiboxteste/aiboxteste/: asgi.py  settings.py  urls.py  wsgi.py
