[tool.poetry]
name = "aibox-teste"
version = "0.1.0"
description = ""
authors = ["FernandaSzAdr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.3"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
