[tool.poetry]
name = "aibox-teste"
version = "0.1.0"
description = ""
authors = ["FernandaSzAdr <fsandrade25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.2"
django-crispy-forms = "^1.8.1"
scipy = "^1.4.1"
scikit-learn = "^0.22.1"
matplotlib = "^3.1.2"
Pillow = "^7.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.3"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
